--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cosmetics Guru</title>
+    <title>Glamour Hub </title>
     <meta name="description" content="Discover and shop the latest female cosmetics all in one app. Enhance your beauty routine with personalized recommendations." />
     <meta name="author" content="Famous.ai" />
     <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
 
-    <meta property="og:title" content="Cosmetics Guru" />
+    <meta property="og:title" content="Cosmetics " />
     <meta property="og:description" content="Discover and shop the latest female cosmetics all in one app. Enhance your beauty routine with personalized recommendations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.jpg" />
